design: Subject Card

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -3,8 +3,8 @@
 @use '@material/theme/color-palette';
 // Svelte Colors!
 @use '@material/theme/index' as theme with (
-  $primary: #6c76c5,
-  $secondary: #6c76c5,
+  $primary: #6A76CB,
+  $secondary: #6A76CB,
   $surface: #f0f2f7,
   $background: #ffffff,
   $error: color-palette.$red-900
