style: Login Page 반응형 update

--- a/src/global.css
+++ b/src/global.css
@@ -57,6 +57,18 @@ a:visited {
 .fnt-sz_35 {
   font-size: 35px;
 }
+.fnt-sz_45 {
+  font-size: 45px;
+}
+.fnt-sz_55 {
+  font-size: 55px;
+}
+.fnt-sz_65 {
+  font-size: 65px;
+}
+.fnt-sz_75 {
+  font-size: 75px;
+}
 .fnt-wg_600 {
   font-weight: 600;
 }
